...
    return Scaffold(
      resizeToAvoidBottomInset: true,
      backgroundColor: AppColors.anthracite,
      appBar: AppBar(
        backgroundColor: AppColors.cardDark,
        automaticallyImplyLeading: true,
        title: Text('Вход', style: unbounded(fontWeight: FontWeight.w500, fontSize: 18, color: Colors.white)),
      ),
      body: SafeArea(
        child: Center(
          child: SingleChildScrollView(
            padding: const EdgeInsets.all(24),
            child: Column(
...
